src/test/fail/break_outside_loop.lly
#[
SyntaxError: 'break' used outside of a loop.
Where: File "test/fail/break_outside_loop.lly" at line 6
]#

break
